Fixes the post template so that images don't spill off the right side and share links are within the container

--- a/assets/css/18f.css
+++ b/assets/css/18f.css
@@ -289,7 +289,12 @@ RESPONSIVE EMBEDS
     margin-bottom: 3em;
     }
   }
-
+/*
+  BLOG
+*/
+body.blog .container img {
+  width: 100%;
+}
 /*
   SLIDESHOW
 */
